changing banner class name in hopes of fixing navbar on mobile

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 
 /* add some color - if you want color behind a major point on your website */
 
-.banner {
+.banner_color {
   background-color: lightblue;
   font-weight:bold;
 
